@@ -1,3 +1,12 @@
+2006-11-10  Steve Huntley  <stephen.huntley@alum.mit.edu>
+
+	* library/template/templatevfs.tcl: file delete on vfs mount 
+	point now causes vfs to unmount ; can now pass empty string
+	as arbitrary attribute value
+
+	* library/template/versionvfs.tcl: more efficient directory
+	deletion code
+
 2006-10-31  Steve Huntley  <stephen.huntley@alum.mit.edu>
 
 	* library/template/versionvfs.tcl: added code to ensure all
